--- a/index.html
+++ b/index.html
@@ -22,3 +22,16 @@
     </div>
 </body>
 </html>
+
+
+<html>
+ <head>
+ 	<title>Фоновое изображение с помощью CSS</title>
+   <style>
+	body {
+		background: url(background.png);
+		background-attachment: fixed; 
+		background-repeat: repeat-x; 
+   </style>
+ </head>
+</html>
