--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             <p>Если гайд оказался полезен, вы можете поддержать авторов проекта донатом:</p>
             <a href="https://yoomoney.ru/to/4100118039663255"><div class="beautiful-link">DONATE</div></a>
             <p class="author">Автор проекта: Мария Лядова</p>
+		<style>
+	body {
+		background: url"background.png";
+		background-attachment: fixed; 
+		background-repeat: repeat-x; 
+   </style>
         </div>
         <iframe class="iframe" src="https://drive.google.com/file/d/1HFQ5OWgdZ4GYfDctJUAJLGNWOY6ZxqJn/preview" allow="autoplay">
         </iframe>
@@ -23,15 +29,3 @@
 </body>
 </html>
 
-
-<html>
- <head>
- 	<title>Фоновое изображение с помощью CSS</title>
-   <style>
-	body {
-		background: url(background.png);
-		background-attachment: fixed; 
-		background-repeat: repeat-x; 
-   </style>
- </head>
-</html>
