--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p class="author">Автор проекта: Мария Лядова</p>
 		<style>
 	body {
-		background: "background.png";
+		background: url "background.png";
 		background-attachment: fixed; 
 		background-repeat: repeat-x; 
    </style>
