--- a/index.html
+++ b/index.html
@@ -10,18 +10,25 @@
 <body>
     <div class="page">
         <div class="contacts">
-            <h1>РЕЛОКАНТЫ</h1>
+            <div class="heading">
+                <h1>РЕЛОКАНТЫ</h1>
+                <img src="assets/underline.svg" class="heading--svg">
+            </div>
             <p>Гайд создан в рамках ютьюб-проекта об иммиграции в турцию. </p>
-            <a href="https://www.youtube.com/@MariaLyadova"><div class="beautiful-link">YOUTUBE</div></a>
+            <a href="https://www.youtube.com/@MariaLyadova">
+                <div class="beautiful-link">
+                    <span>YOUTUBE</span>
+                    <img src="assets/buttonback.svg" class="beautiful-link--svg">
+                </div>
+            </a>
             <p>Если гайд оказался полезен, вы можете поддержать авторов проекта донатом:</p>
-            <a href="https://yoomoney.ru/to/4100118039663255"><div class="beautiful-link">DONATE</div></a>
+            <a href="https://yoomoney.ru/to/4100118039663255">
+                <div class="beautiful-link">
+                <span>DONATE</span>
+                <img src="assets/buttonback.svg" class="beautiful-link--svg">
+                </div>
+            </a>
             <p class="author">Автор проекта: Мария Лядова</p>
-		<style>
-	body {
-		background: url "background.png";
-		background-attachment: fixed; 
-		background-repeat: repeat-x; 
-   </style>
         </div>
         <iframe class="iframe" src="https://drive.google.com/file/d/1HFQ5OWgdZ4GYfDctJUAJLGNWOY6ZxqJn/preview" allow="autoplay">
         </iframe>
